# armnn

./: .clang-format  .clang-format.license  .gitattributes  AUTHORS-TensorFlow  AUTHORS-TensorFlow.license  Android.bp  Android.mk  ArmnnVersion.txt  BuildGuideAndroidNDK.md  BuildGuideCrossCompilation.md  BuildGuideCrossCompilation.md.license  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.md.license  ContributorGuide.md  ContributorGuide.md.license  InstallationViaAptRepository.md  LICENSE  LICENSE.spdx  Owner  README.md  README.md.license  SECURITY.md  SECURITY.md.license  latest
delegate/: BuildGuideNative.md  CMakeLists.txt  DelegateQuickStartGuide.md  DelegateQuickStartGuide.md.license  IntegrateDelegateIntoPython.md  README.md  README.md.license  TensorFlowLiteDelegateSupport.md
delegate/armnnDelegateJNI/: CMakeLists.txt  README.md  version_script
delegate/classic/: CMakeLists.txt
delegate/include/: DelegateOptions.hpp  Version.hpp  armnn_delegate.hpp
delegate/opaque/: CMakeLists.txt
delegate/src/: Activation.hpp  ArgMinMax.hpp  BatchMatMul.hpp  BatchSpace.hpp  Comparison.hpp  Control.hpp  Convolution.hpp  DelegateOptions.cpp  DelegateUtils.hpp  ElementwiseBinary.hpp  ElementwiseUnary.hpp  Fill.hpp  FullyConnected.hpp  Gather.hpp  GatherNd.hpp  LogicalBinary.hpp  Lstm.hpp  MultiLayerFacade.hpp  Normalization.hpp  Pack.hpp  Pad.hpp  Pooling.hpp  Prelu.hpp  Quantization.hpp  Redefine.hpp  Reduce.hpp  Resize.hpp  Round.hpp  Shape.hpp  SharedFunctions.cpp  SharedFunctions.hpp  Slice.hpp  Softmax.hpp  SpaceDepth.hpp  Split.hpp  StridedSlice.hpp  Transpose.hpp  UnidirectionalSequenceLstm.hpp  Unpack.hpp  armnn_delegate.cpp  (+1 more)
delegate/test/: ActivationTest.cpp  ActivationTestHelper.hpp  ArgMinMaxTest.cpp  ArgMinMaxTestHelper.hpp  ArmnnDelegateTest.cpp  BatchMatMulTest.cpp  BatchMatMulTestHelper.hpp  BatchSpaceTest.cpp  BatchSpaceTestHelper.hpp  BroadcastToTest.cpp  BroadcastToTestHelper.hpp  CastTest.cpp  CastTestHelper.hpp  ComparisonTest.cpp  ComparisonTestHelper.hpp  ControlTest.cpp  ControlTestHelper.hpp  Convolution2dTest.cpp  Convolution3dTest.cpp  ConvolutionTestHelper.hpp  DelegateOptionsTest.cpp  DelegateOptionsTestHelper.hpp  DepthwiseConvolution2dTest.cpp  ElementwiseBinaryTest.cpp  ElementwiseBinaryTestHelper.hpp  ElementwiseUnaryTest.cpp  ElementwiseUnaryTestHelper.hpp  ExpandDimsTest.cpp  FillTest.cpp  FillTestHelper.hpp  FullyConnectedTest.cpp  FullyConnectedTestHelper.hpp  GatherNdTest.cpp  GatherNdTestHelper.hpp  GatherTest.cpp  GatherTestHelper.hpp  LogicalTest.cpp  LogicalTestHelper.hpp  LstmTest.cpp  LstmTestHelper.hpp  (+52 more)
profiling/: CMakeLists.txt  buildpipe.sh  toolchain-x86-ubuntu-mingw64.cmake
samples/: AsyncExecutionSample.cpp  BareMetalDeserializedGraph.cpp  CMakeLists.txt  CustomMemoryAllocatorSample.cpp  DynamicSample.cpp  PreImportMemorySample.cpp  SimpleSample.cpp  examples.dox
samples/ImageClassification/: README.md  requirements.txt  run_classifier.py
samples/KeywordSpotting/: CMakeLists.txt  Readme.md
samples/ObjectDetection/: CMakeLists.txt  Readme.md
samples/SpeechRecognition/: CMakeLists.txt  Readme.md
samples/serialized/: Readme.md  Readme.md.license  ssd_mobilenet_v3_small_coco_2019_08_14.armnn
shim/sl/: CMakeLists.txt  README.md  support_library_service.cpp
src/armnnDeserializer/: CMakeLists.txt  Deserializer.cpp  Deserializer.hpp  DeserializerSupport.md  README.md
src/armnnSerializer/: ArmnnSchema.fbs  ArmnnSchema_generated.h  CMakeLists.txt  README.md  Schema.fbs  SeralizerSupport.md  Serializer.cpp  Serializer.hpp  SerializerSupport.md  SerializerUtils.cpp  SerializerUtils.hpp
src/armnnTestUtils/: CMakeLists.txt  CommonTestUtils.cpp  CommonTestUtils.hpp  CreateWorkload.hpp  DataTypeUtils.hpp  GraphUtils.cpp  GraphUtils.hpp  MockBackend.cpp  MockMemoryManager.cpp  MockTensorHandle.cpp  MockTensorHandleFactory.cpp  MockTensorHandleFactory.hpp  MockWorkloadFactoryHelper.hpp  TensorCopyUtils.cpp  TensorHelpers.hpp  TestUtils.cpp  TestUtils.hpp  UnitTests.cpp  UnitTests.hpp  WorkloadTestUtils.hpp
src/armnnTfLiteParser/: CMakeLists.txt  README.md  README.md.license  TensorFlowLiteSupport.md  TfLiteParser.cpp  TfLiteParser.hpp
src/backends/: ArmComputeTensorUtils.cpp  BackendContextRegistry.cpp  BackendContextRegistry.hpp  BackendRegistry.cpp  BackendRegistry.hpp  CMakeLists.txt  ClContextControl.hpp  ClLayerSupport.cpp  ClLayerSupport.hpp  ClTensorHandle.hpp  ClWorkloadFactory.cpp  ClWorkloadFactory.hpp  ClWorkloads.hpp  CpuTensorHandle.cpp  CpuTensorHandle.hpp  CpuTensorHandleFwd.hpp  IBackendContext.hpp  IBackendInternal.hpp  ILayerSupport.cpp  LayerSupportRegistry.hpp  MakeWorkloadHelper.hpp  MemCopyWorkload.cpp  MemCopyWorkload.hpp  NeonLayerSupport.cpp  NeonTensorHandle.hpp  NeonWorkloadFactory.cpp  NeonWorkloadFactory.hpp  NeonWorkloadUtils.cpp  NeonWorkloadUtils.hpp  NeonWorkloads.hpp  OutputHandler.cpp  OutputHandler.hpp  README.md  RefWorkloadFactory.cpp  RefWorkloadFactory.hpp  RegistryCommon.hpp  StringMapping.hpp  Workload.hpp  WorkloadData.cpp  WorkloadData.hpp  (+4 more)
src/timelineDecoder/: CMakeLists.txt  JSONTimelineDecoder.cpp  JSONTimelineDecoder.hpp  TimelineCaptureCommandHandler.cpp  TimelineCaptureCommandHandler.hpp  TimelineDecoder.cpp  TimelineDecoder.hpp  TimelineDirectoryCaptureCommandHandler.cpp  TimelineDirectoryCaptureCommandHandler.hpp
tests/: CMakeLists.txt  CaffePreprocessor.cpp  CaffePreprocessor.hpp  Cifar10Database.cpp  Cifar10Database.hpp  ClassifierTestCaseData.hpp  CxxoptsUtils.hpp  DeepSpeechV1Database.hpp  DeepSpeechV1InferenceTest.hpp  ImageNetDatabase.cpp  ImageNetDatabase.hpp  ImagePreprocessor.cpp  ImagePreprocessor.hpp  InferenceModel.hpp  InferenceTest.cpp  InferenceTest.hpp  InferenceTest.inl  InferenceTestImage.cpp  InferenceTestImage.hpp  LstmCommon.hpp  MnistDatabase.cpp  MnistDatabase.hpp  MobileNetDatabase.cpp  MobileNetDatabase.hpp  MobileNetSsdDatabase.hpp  MobileNetSsdInferenceTest.hpp  ObjectDetectionCommon.hpp  YoloDatabase.cpp  YoloDatabase.hpp  YoloInferenceTest.hpp
tests/CaffeAlexNet-Armnn/: CaffeAlexNet-Armnn.cpp
tests/CaffeInception_BN-Armnn/: Validation.txt  (+1 more)
(+178742 files in other folders)
